Fix navigation spacing

--- a/scss/sections/_navigation.scss
+++ b/scss/sections/_navigation.scss
@@ -26,7 +26,7 @@
                 color:$blue-darker-3 !important;
                 font-weight: 500;
                 display:inline-block;
-                padding:9px 32px;
+                padding:9px 29px;
                 font-size:18px;
                 position:relative;
                 text-transform: uppercase;
